--- a/styles/pdf.scss
+++ b/styles/pdf.scss
@@ -31,6 +31,7 @@
         @include section_title_img();
         @include section_title_preface(0.65em * 0.7, 150px, -75px, -70px);
         @include point_item(0.65em, 1.5, 0.3em, -1.3em, 12px, 12px);
+        @include space_no(0px);
         @include space_xxs(10px);
         @include space_xs(20px);
         @include space_s(40px);
